# ReactOS

./: CMakeLists.txt  configure.cmd  overrides-gcc.cmake  overrides-msvc.cmake  toolchain-gcc.cmake  toolchain-msvc.cmake
base/applications/calc/: CMakeLists.txt
base/applications/charmap/: CMakeLists.txt
base/applications/charmap_new/: CMakeLists.txt
base/applications/clipbrd/: CMakeLists.txt
base/applications/drwtsn32/: CMakeLists.txt
base/applications/dxdiag/: CMakeLists.txt
base/applications/fontview/: CMakeLists.txt
base/applications/magnify/: CMakeLists.txt
base/applications/mmc/: CMakeLists.txt
base/applications/msconfig/: CMakeLists.txt
base/applications/msconfig_new/: CMakeLists.txt
base/applications/mspaint/: CMakeLists.txt
base/applications/mstsc/: CMakeLists.txt
base/applications/notepad/: CMakeLists.txt
base/applications/rapps/: CMakeLists.txt
base/applications/regedit/: CMakeLists.txt
base/applications/sc/: CMakeLists.txt
boot/bootdata/: CMakeLists.txt
boot/environ/: CMakeLists.txt
dll/ntdll/: CMakeLists.txt
drivers/processor/processr/: CMakeLists.txt
media/doc/: README.WINE
modules/: CMakeLists.txt
ntoskrnl/: CMakeLists.txt
ntoskrnl/ntkrnlmp/: CMakeLists.txt
sdk/cmake/: CMakeMacros.cmake  cabman.cmake  compilerflags.cmake  config-amd64.cmake  config-arm.cmake  config-i386.cmake  config.cmake  gcc.cmake  host-tools.cmake  mkisofs.cmake  msvc.cmake  widl-support.cmake
sdk/include/: CMakeLists.txt
sdk/lib/: CMakeLists.txt
sdk/tools/: CMakeLists.txt
subsystems/mvdm/: asm16.cmake
win32ss/: CMakeLists.txt
(+355 files in other folders)
